--- a/main.html
+++ b/main.html
@@ -6,5 +6,19 @@
         <link type="text/css" rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+            <div>Main title</div>
+            <div>About</div>
+            <div>Contacts</div>
+            <div>Friends</div>
+            <div>Magazine</div>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
     </body>
+    <script src="script.js"></script>
 </html>
